# etherpacket

./: EncodeBits.hs  EtherPacket  EtherPacket.hs  Ethernet.hs  IP.hs  LICENSE  NOTICE  OpenCL.hs  OutputHeader.hs  UDP.hs  cabal.project  etherpacket.cabal  gen-opencl-packet
src/: EncodeBits.hs  Ethernet.hs  IP.hs  UDP.hs
